--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
                              <div class="col-sm-4">
                                 <h5 class="fontOne">Baltimore, MD
                                 </h5>
-                                <p  class="summary"> May, 2018
+                                <p  class="summary"> 24 May, 2018
                                 </p>
                             </div>
                         </div>
                         <div class="row ">
                             <div class="col-sm-8">
                                 <h5 class="fontOne">Montgomery College Business Training Center	</h5>
-                                <p  class="summary">Code Work Academy - 8 week Java Bootcamp	<br>
+                                <p  class="summary">Code Work Academy - 10 week Java Bootcamp	<br>
                                     (Core JAVA, Spring Boot, HTML, CSS, Bootstrap, Javascript)
                                 </p>
                             </div>
@@ -135,7 +135,7 @@
                             <div class="col-sm-4">
                                 <h5 class="fontOne">Baltimore, MD
                                 </h5>
-                                <p  class="summary" id="skill">   Dec 2015
+                                <p  class="summary" id="skill">   20 Dec 2015
                                 </p>
                             </div>
                         </div>
