--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                             <a class="dropdown-item" href="https://ancient-lowlands-91724.herokuapp.com" target="_blank">Fruit Vendor Application</a>
                         </div>
                     </li>
+                    <li class="nav-item fontOne">
+                        <a class="nav-link" href="contact.html" >Contact Me</a>
+                    </li>
                 </ul>
 
             </div>
