--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,8 @@
                         <a class="dropdown-item" href="https://tranquil-brook-51120.herokuapp.com" target="_blank">Car Dealership Application</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="https://ancient-lowlands-91724.herokuapp.com" target="_blank">Fruit Vendor Application</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://fierce-citadel-29120.herokuapp.com" target="_blank">Search Application</a>
                     </div>
                 </li>
 
