--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <div class="row p-2">
                         <div class="col-sm-8">
                             <h5 class="fontOne">Pizza Palace </h5>
-                            <p class="summary">Shift Leader</p>
+                            <p class="summary">Crew Member</p>
                             <ul>
                                 <li>Organized and assigned shift schedule for crew members and drivers</li>
                                 <li>Verified all the order, customer requests, and prepared the orders quickly .</li>
@@ -305,7 +305,7 @@
                         <div class="col-sm-4">
                             <h5 class="fontOne">Baltimore, MD
                             </h5>
-                            <p  class="summary"> Aug 2013 - Aug, 2016
+                            <p  class="summary"> Feb 2013 - Aug, 2016
                             </p>
                         </div>
                     </div>
